--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,4 +1,5 @@
 ---
+logo.png: logo-fe921ccd985f878d40261270496ad20b.png
 rails.png: rails-e4b51606cd77fda2615e7439907bfc92.png
 application.js: application-ae30e133eabbb10d9464189d3fb71e25.js
 application.css: application-cd728f3a08415c27ca2e753d30091c74.css
